--- a/VidhayakApp.Web/Views/AppUser/Suggestion.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/Suggestion.cshtml
@@ -69,6 +69,12 @@ else
                     </section>
                 </section>
             </form>
+            @if (Model.UserDetailAndFormDetailOnAppUserDashboardViewModel == null || !Model.UserDetailAndFormDetailOnAppUserDashboardViewModel.Any())
+            {
+                <p>No data found.</p>
+            }
+            else
+            {
             <section class="table__body">
                 <table>
                     <thead>
@@ -125,6 +131,7 @@ else
 
                     </div>
             </section>
+            }
         </main>
     </body>
 
