--- a/VidhayakApp.Web/Views/Form/Form.cshtml
+++ b/VidhayakApp.Web/Views/Form/Form.cshtml
@@ -196,6 +196,10 @@
     </section>
     <script src="~/js/Demand.js"></script>
     <script src="~/js/DepartmentSchemeDisable.js"></script>
+    <script>
+            var formName = document.getElementById("#categoryInput");
+        console.log("formName");
+    </script>
 
 </body>
     }
