15-04-2024 16:45pm some Layout changes

--- a/VidhayakApp.Web/Views/Account/Successfull.cshtml
+++ b/VidhayakApp.Web/Views/Account/Successfull.cshtml
@@ -131,7 +131,7 @@
             Thank you! You have successfully registered on our website. You can now proceed.
           </div>
           <div>
-          <button asp-action="Login" asp-controller="Account" class="submit">Continue</button>
+          <button asp-action="Login" asp-controller="Account" type="submit">Continue</button>
         </div>
         </div> 
         @* <div class="failed">
