--- a/VidhayakApp.Web/Views/Account/Unsuccessfull.cshtml
+++ b/VidhayakApp.Web/Views/Account/Unsuccessfull.cshtml
@@ -139,7 +139,7 @@
                 Oops! It seems like there's a hiccup in your registration process.
             </div>
             <div>
-                <button asp-action="Register" asp-controller="Account" class="submit">Try again</button>
+                <button asp-action="Register" asp-controller="Account" type="submit">Try again</button>
             </div>
         </div>
     </div>
