--- a/VidhayakApp.Web/Views/Shared/_AppUserLayout.cshtml
+++ b/VidhayakApp.Web/Views/Shared/_AppUserLayout.cshtml
@@ -242,7 +242,7 @@
             <div class="container-fluid py-1 px-3">
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
-                        <li class="breadcrumb-item text-sm"><a class="opacity-5 text-black" href="javascript:;.html"></a></li>
+                        <li class="breadcrumb-item text-sm"><a class="opacity-5 text-black" asp-action="Dashboard" asp-controller="AppUser">Dashboard</a></li>
                         <li class="breadcrumb-item text-sm text-black active" aria-current="page">@ViewData["Title"]</li>
                     </ol>
                     @* <h6 class="font-weight-bolder text-white mb-0">Dashboard</h6> *@
