18-04-2024 12:13pm Middleware implemented not working

--- a/VidhayakApp.Web/Views/Shared/_Layout.cshtml
+++ b/VidhayakApp.Web/Views/Shared/_Layout.cshtml
@@ -189,7 +189,7 @@
                         </li>
                         &nbsp;  &nbsp;
                         <li class="nav-item d-flex align-items-center">
-                            <a asp-action="Register" asp-controller="Account" asp-route-id="6" class="nav-link text-black font-weight-bold px-0">
+                            <a asp-action="Register" asp-controller="Account" class="nav-link text-black font-weight-bold px-0">
                                 <i class="fa fa-user me-sm-1"></i>
                                 <span class="d-sm-inline d-none">Sign Up</span>
                             </a>
