18-04-2024 18:36pm Middleware still not working

--- a/VidhayakApp.Web/Views/Account/Login.cshtml
+++ b/VidhayakApp.Web/Views/Account/Login.cshtml
@@ -275,7 +275,7 @@
                                 </div>
  *@                               
                                 <div class="text-center">
-                                    <button asp-action="Login" asp-controller="Account" type="submit" class="btn bg-gradient-dark w-100 my-4 mb-2" asp-route-tokendata="@context.Session.GetString("JwtToken")">Sign In</button>
+                                    <button asp-action="Login" asp-controller="Account" type="submit" class="btn bg-gradient-dark w-100 my-4 mb-2" >Sign In</button>
                                 </div>
                                 <p class="text-sm mt-3 mb-0">Don't have an account? <a asp-action="Register" asp-controller="Account" type="submit" class="text-dark font-weight-bolder">Sign Up</a></p>
                             </form>
