25-04-2024 14:29pm authorization from view 404not founderror page not working

--- a/VidhayakApp.Web/Views/Admin/AppUsers.cshtml
+++ b/VidhayakApp.Web/Views/Admin/AppUsers.cshtml
@@ -8,13 +8,15 @@
     var context = HttpContextAccessor.HttpContext;
     // Use httpContext as needed
     var loggedInId = context.Session.GetInt32("UserId");
-
+    var loggedInRoleId = context.Session.GetInt32("RoleId");
+    var loggedInRoleName = context.Session.GetString("RoleName");
 }
 
 @if(loggedInId == null)
 {
     context.Response.Redirect("/Account/Login");
 }
+else if (loggedInRoleName == "Admin" && loggedInRoleId == 2){
 
 @TempData["Message"]
 
@@ -95,7 +97,10 @@
 
 </html>
     
-
+} else
+{
+    context.Response.Redirect("Shared/404NotFoundError");
+}
 
 
 
