--- a/VidhayakApp.Web/Views/AppUser/Dashboard.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/Dashboard.cshtml
@@ -11,13 +11,17 @@
     var context = HttpContextAccessor.HttpContext;
     // Use httpContext as needed
     var loggedInId = context.Session.GetInt32("UserId");
+    var loggedInRoleId = context.Session.GetInt32("RoleId");
+    var loggedInRoleName = context.Session.GetString("RoleName");
 
 }
 
 @if(loggedInId == null)
 {
     context.Response.Redirect("/Account/Login");
-}else{
+}
+else if (loggedInRoleName == "AppUser" && loggedInRoleId == 3)
+{
 <html>
  <head>
 <!-- Google Font: Source Sans Pro -->
@@ -205,6 +209,9 @@
 </body>
 </html>
 
-  }
+} else
+{
+    context.Response.Redirect("/Shared/404NotFoundError");
+}
 
  
