--- a/VidhayakApp.Web/Views/AppUser/Edit.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/Edit.cshtml
@@ -9,13 +9,16 @@
     var context = HttpContextAccessor.HttpContext;
     // Use httpContext as needed
     var loggedInId = context.Session.GetInt32("UserId");
-
+    var loggedInRoleId = context.Session.GetInt32("RoleId");
+    var loggedInRoleName = context.Session.GetString("RoleName");
 }
 
 @if (loggedInId == null)
 {
     context.Response.Redirect("/Account/Login");
-}else{
+}
+else if (loggedInRoleName == "AppUser" && loggedInRoleId == 3)
+{
     @TempData["Message"]
 
     <link rel="stylesheet" href="~/css/site.css" />
@@ -169,4 +172,7 @@
         </div>
     </div>
 </section>
+} else
+{
+    context.Response.Redirect("/Shared/404NotFoundError");
 }
