--- a/VidhayakApp.Web/Views/AppUser/ListUsers.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/ListUsers.cshtml
@@ -8,13 +8,16 @@
     var context = HttpContextAccessor.HttpContext;
     // Use httpContext as needed
     var loggedInId = context.Session.GetInt32("UserId");
-
+    var loggedInRoleId = context.Session.GetInt32("RoleId");
+    var loggedInRoleName = context.Session.GetString("RoleName");
 }
 
 @if(loggedInId == null)
 {
     context.Response.Redirect("/Account/Login");
 }
+else if (loggedInRoleName == "AppUser" && loggedInRoleId == 3)
+{
 
 @TempData["Message"]
 
@@ -94,4 +97,7 @@
 </body>
 
 </html>
-    
+} else
+{
+    context.Response.Redirect("/Shared/404NotFoundError");
+}
