--- a/VidhayakApp.Web/Views/Admin/Create.cshtml
+++ b/VidhayakApp.Web/Views/Admin/Create.cshtml
@@ -9,12 +9,16 @@
     var context = HttpContextAccessor.HttpContext;
     // Use httpContext as needed
     var loggedInId = context.Session.GetInt32("UserId");
+    var loggedInRoleId = context.Session.GetInt32("RoleId");
+    var loggedInRoleName = context.Session.GetString("RoleName");
 
 }
 @if(loggedInId == null)
 {
     context.Response.Redirect("/Account/Login");
-}else{
+}
+else if (loggedInRoleName == "Admin" && loggedInRoleId == 2)
+{
 
     @TempData["Message"]
 
@@ -150,4 +154,8 @@
         </div>
     </div>
 </section>
+}
+else
+{
+    context.Response.Redirect("/Shared/404NotFoundError");
 }
