--- a/VidhayakApp.Web/Views/AppUser/Create.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/Create.cshtml
@@ -8,12 +8,15 @@
     var context = HttpContextAccessor.HttpContext;
     // Use httpContext as needed
     var loggedInId = context.Session.GetInt32("UserId");
+    var loggedInRoleId = context.Session.GetInt32("RoleId");
+    var loggedInRoleName = context.Session.GetString("RoleName");
 
 }
 @if(loggedInId == null)
 {
     context.Response.Redirect("/Account/Login");
-}else{
+}
+else if (loggedInRoleName == "AppUser" && loggedInRoleId == 3){
 
     @TempData["Message"]
 
@@ -176,4 +179,7 @@
         </div>
     </div>
 </section>
+} else
+{
+    context.Response.Redirect("/Shared/404NotFoundError");
 }
