--- a/VidhayakApp.Web/Views/AppUser/Demand.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/Demand.cshtml
@@ -13,6 +13,7 @@
     // Use httpContext as needed
     var loggedInId = context.Session.GetInt32("UserId");
     var loggedInRoleId = context.Session.GetInt32("RoleId");
+    var loggedInRoleName = context.Session.GetString("RoleName");
 
     if (loggedInRoleId == 2)
     {
@@ -30,7 +31,9 @@
 @if(loggedInId == null)
 {
     context.Response.Redirect("/Account/Login");
-}else{
+}
+else if (loggedInRoleName == "AppUser" && loggedInRoleId == 3 ||loggedInRoleName == "Admin" && loggedInRoleId == 2)
+{
 
 <!DOCTYPE html>
 <html lang="en">
@@ -166,6 +169,9 @@
 </html>
 
 
+} else
+{
+    context.Response.Redirect("/Shared/404NotFoundError");
 }
 
 
