--- a/VidhayakApp.Web/Views/User/Complaints.cshtml
+++ b/VidhayakApp.Web/Views/User/Complaints.cshtml
@@ -14,15 +14,16 @@
     // Use httpContext as needed
     var loggedInId = context.Session.GetInt32("UserId");
     var loggedInRoleId = context.Session.GetInt32("RoleID");
+    var loggedInRoleName = context.Session.GetString("RoleName");
     var tokenValue = context.Session.GetString("JwtToken");
     string dateToday = DateTime.Now.ToString("dd-mm-yyyy");
 }
 
-@if (loggedInId == null || tokenValue == null || loggedInRoleId == null || loggedInRoleId != 4)
+@if (loggedInId == null || tokenValue == null || loggedInRoleId == null )
 { 
     context.Response.Redirect("/Account/Login");
 }
-else
+else if (loggedInRoleName == "User" && loggedInRoleId == 4)
 {
 
     <!DOCTYPE html>
@@ -188,6 +189,9 @@ else
 
     </html>
 
+}else
+{
+    context.Response.Redirect("/Shared/404NotFoundError");
 }
 
 
